cilium/pod-test-cilium-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: tests-misc
  labels:
    app: client
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
