cilium/pod-test-cilium-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: server
  namespace: tests-misc
  labels:
    app: server
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "nc -lk -p 80"]
