cilium/pod-test-cilium.yaml
# test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-cilium
  namespace: tests-misc
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
    securityContext:
      capabilities:
        add:
          - NET_ADMIN
