cilium/cnp-cilium-client-to-server.yaml
# allow-client-to-server.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-client-to-server
  namespace: tests-misc
spec:
  endpointSelector:
    matchLabels:
      app: server
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: client
